[package]
name = "find"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { version = "0.3", features = [] }
walkdir = { version = "2", features = [] }
clap = { version = "4.0", features = ["derive"] }